--- a/Style.css
+++ b/Style.css
@@ -48,3 +48,77 @@ div {
 	
 }
 
+p{
+	color: gray;
+	margin:22px;
+	
+}
+
+
+
+
+a:link{
+	color: green;
+	background-color:   transparent;
+	text-decoration: none;
+}
+
+a:visited{
+	color: pink;
+	background: transparent;
+	text-decoration: underline;
+}
+
+a:active{
+	color: red;
+	background-color: transparent;
+	text-decoration: underline;
+}
+
+
+
+.grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 2fr 2fr ;
+  grid-template-rows: 2rem 3rem 2rem 3rem 4rem;
+  gap: 4rem;
+  grid-row-gap: 1rem;
+  background-image: -moz-linear-gradient(#ff56, #ff4043, #f4035677);
+  font-size: 16px;;
+  padding: 20px;
+  margin: 15px;
+  border: 2px solid;
+  background-color: darkslategrey;
+  
+}
+
+h5{
+	font-size: 20px;
+	color: rgb(54, 121, 121);
+	
+}
+
+.flexbox2 {
+    display: flex;
+	border: 2px solid ;
+	height: 100px;
+	width: 100px;
+	padding: 50px;
+	font-size: 20px;
+	background-image:url(https://wallpapercave.com/uwp/uwp1295231.png); 
+	text-align: center;
+    font-weight: bolder;
+	font-style: italic;
+	font-family: monospace;
+/*	margin: 40% 40%;*/
+	border-radius: 30px;;
+
+
+
+}
+
+div{
+    display: flex;
+	justify-content: center;
+}
+
